maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:6: error: '(' expected but identifier found.
      else {(if random3()==1) {droite()} else {gauche()}}} ; prendBiscuit()
                ^RandomMouseMaze:6: error: illegal start of simple expression
      else {(if random3()==1) {droite()} else {gauche()}}} ; prendBiscuit()
                                                        ^